--- a/package.json
+++ b/package.json
@@ -3,13 +3,36 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon",
+    "start:client": "webpack-dev-server --mode development --inline --hot --open --config src/client/webpack.config.js",
+    "start:server": "nodemon"
+  },
   "dependencies": {
-    "express": "^4.16.3"
+    "@types/axios": "^0.14.0",
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
+    "global-request-logger": "^0.1.1",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.11",
+    "lodash-es": "^4.17.11",
+    "mitm": "^1.4.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/lodash-es": "^4.17.1",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^6.26.3",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
-    "typescript": "^3.0.3"
+    "typescript": "^3.0.3",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.9"
   }
 }
