--- a/package.json
+++ b/package.json
@@ -1,36 +1,54 @@
 {
   "name": "request-logger",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.1.0",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon",
-    "start:client": "webpack-dev-server --mode development --inline --hot --open --config src/client/webpack.config.js",
+    "build": "concurrently \"yarn build:client\" \"yarn build:server\"",
+    "build:client": "webpack --config src/client/webpack.config.js",
+    "build:server": "tsc -p src/server/tsconfig.json",
+    "start": "concurrently \"yarn start:client\" \"yarn start:server\"",
+    "start:client": "webpack-dev-server --mode development --inline --hot --config src/client/webpack.config.js",
     "start:server": "nodemon"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^0.18.0",
+    "emotion": "^9.2.10",
     "express": "^4.16.3",
     "global-request-logger": "^0.1.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
     "mitm": "^1.4.0",
+    "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "socket.io": "^2.1.1"
+    "react-emotion": "^9.2.10",
+    "react-json-view": "^1.19.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "shortid": "^2.2.13",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/lodash-es": "^4.17.1",
+    "@types/react": "^16.4.14",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
+    "babel-plugin-emotion": "^9.2.10",
+    "concurrently": "^4.0.1",
+    "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.4",
+    "prettier": "^1.14.3",
+    "redux-devtools-extension": "^2.13.5",
+    "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.0.3",
+    "typescript": "^3.1.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.9"
