--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": ["es2015"],
     "paths": {
       "lodash/*": ["node_modules/@types/lodash-es/*"]
-    }
+    },
+    "outDir": "../../dist"
   }
 }
