--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "emotion": "^9.2.10",
     "express": "^4.16.3",
     "global-request-logger": "^0.1.1",
