--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-easy-state": "^6.0.4",
     "react-emotion": "^9.2.10",
     "react-json-view": "^1.19.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
     "shortid": "^2.2.13",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
@@ -46,7 +45,6 @@
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.4",
     "prettier": "^1.14.3",
-    "redux-devtools-extension": "^2.13.5",
     "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.1",
