--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "allowJs": true,
+    "allowJs": false,
     "jsx": "react",
     "baseUrl": "/src",
     "allowSyntheticDefaultImports": true,
     "lib": ["es2015"],
+    "declaration": true,
     "outDir": "../../dist"
   }
 }
