--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "network-snatcher",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
@@ -12,17 +12,9 @@
     "start:server": "nodemon"
   },
   "dependencies": {
-    "emotion": "^9.2.10",
     "express": "^4.16.3",
-    "normalize.css": "^8.0.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-easy-state": "^6.0.4",
-    "react-emotion": "^9.2.10",
-    "react-json-view": "^1.19.1",
     "shortid": "^2.2.13",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
@@ -32,10 +24,18 @@
     "babel-plugin-emotion": "^9.2.10",
     "concurrently": "^4.0.1",
     "css-loader": "^1.0.0",
+    "emotion": "^9.2.12",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.4",
+    "normalize.css": "^8.0.0",
     "prettier": "^1.14.3",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-easy-state": "^6.0.4",
+    "react-emotion": "^9.2.12",
+    "react-json-view": "^1.19.1",
+    "socket.io-client": "^2.1.1",
     "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.1",
